--- a/resources/assets/common-components.html
+++ b/resources/assets/common-components.html
@@ -331,6 +331,61 @@
                     </tbody>
                 </table>
 
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <table class="basic-table type2">
+                                    <thead>
+                                        <tr>
+                                            <th>a</th>
+                                            <th>a</th>
+                                            <th>a</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>d</td>     
+                                            <td>d</td>     
+                                            <td>d</td>     
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>pagination</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="pagination m-0">
+                                    <ul>
+                                        <li class="double-prev"><a href=""><i class="i i-arrow-double-left"></i></a></li>
+                                        <li class="prev"><a href=""><i class="i i-arrow-left-2"></i></a></li>
+                                        <li class="active"><a href="">1</a></li>
+                                        <li><a href="">2</a></li>
+                                        <li><a href="">3</a></li>
+                                        <li><a href="">4</a></li>
+                                        <li><a href="">5</a></li>
+                                        <li><a href="">6</a></li>
+                                        <li><a href="">7</a></li>
+                                        <li><a href="">8</a></li>
+                                        <li><a href="">9</a></li>
+                                        <li><a href="">10</a></li>
+                                        <li class="next"><a href=""><i class="i i-arrow-right"></i></a></li>
+                                        <li class="double-next"><a href=""><i class="i i-arrow-double-right"></i></a></li>
+                                    </ul>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
             </section>
         </section>
     </div>
