--- a/resources/assets/GEPS-WEB-BIV-CU01.html
+++ b/resources/assets/GEPS-WEB-BIV-CU01.html
@@ -673,6 +673,24 @@
                             </tbody>
                         </table>
                     </div>
+                    <div class="pagination">
+                        <ul>
+                            <li class="double-prev"><a href=""><i class="i i-arrow-double-left"></i></a></li>
+                            <li class="prev"><a href=""><i class="i i-arrow-left-2"></i></a></li>
+                            <li class="active"><a href="">1</a></li>
+                            <li><a href="">2</a></li>
+                            <li><a href="">3</a></li>
+                            <li><a href="">4</a></li>
+                            <li><a href="">5</a></li>
+                            <li><a href="">6</a></li>
+                            <li><a href="">7</a></li>
+                            <li><a href="">8</a></li>
+                            <li><a href="">9</a></li>
+                            <li><a href="">10</a></li>
+                            <li class="next"><a href=""><i class="i i-arrow-right"></i></a></li>
+                            <li class="double-next"><a href=""><i class="i i-arrow-double-right"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
