--- a/resources/assets/GEPS-WEB-BIV-LI01.html
+++ b/resources/assets/GEPS-WEB-BIV-LI01.html
@@ -130,10 +130,10 @@
                     <div class="sub-cont-top ais">
                         <h1>신상조사 통계</h1>
                         <ul class="bread-crumb">
-                            <li><span class="ico home">home</span></li>
-                            <li><span class="ico arrow">arrow</span></li>
-                            <li class="active">신상조사</li>
-                            <li><span class="ico arrow">arrow</span></li>
+                            <li><i class="i i-home"></i></li>
+                            <li><i class="i i-arrow-left"></i></li>
+                            <li>신상조사</li>
+                            <li><i class="i i-arrow-left"></i></li>
                             <li>신상조사 등록관리</li>
                         </ul>
                     </div>
