--- a/resources/assets/GEPS-WEB-STA-BV04.html
+++ b/resources/assets/GEPS-WEB-STA-BV04.html
@@ -130,12 +130,12 @@
                     <div class="sub-cont-top ais">
                         <h1>신상조사 통계</h1>
                         <ul class="bread-crumb">
-                            <li><span class="ico home">home</span></li>
-                            <li><span class="ico arrow">arrow</span></li>
-                            <li class="active">통계조회</li>
-                            <li><span class="ico arrow">arrow</span></li>
-                            <li class="active">신상조사 통계</li>
-                            <li><span class="ico arrow">arrow</span></li>
+                            <li><i class="i i-home"></i></li>
+                            <li><i class="i i-arrow-left"></i></li>
+                            <li>통계조회</li>
+                            <li><i class="i i-arrow-left"></i></li>
+                            <li>신상조사 통계</li>
+                            <li><i class="i i-arrow-left"></i></li>
                             <li>신상조사 통계지표</li>
                         </ul>
                     </div>
