--- a/resources/assets/GEPS-WEB-STA-BV01.html
+++ b/resources/assets/GEPS-WEB-STA-BV01.html
@@ -153,77 +153,116 @@
                     <div class="form bg-white pa4048 g40">
                         <div class="table-top2">
                             <h2 class="title">신상조사 실시/응답</h2>
-                            <div class="dropdown-group type3">
-                                <h2 class="hidden">타이틀</h2>
-                                <div class="dropdown-list-wrap">
-                                    <button class="dropdown-button" data-target="drop03"><i
-                                            class="i i-calendar"></i>지난 28일</button>
-                                    <ul id="drop03" class="dropdown-list">
-                                        <li>
-                                            <div class="radio-group radio-sm">
-                                                <input type="radio" id="radio11" name="radio-group">
-                                                <label for="radio11">지난 7일</label>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="radio-group radio-sm">
-                                                <input type="radio" id="radio12" name="radio-group">
-                                                <label for="radio12">지난 28일</label>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="radio-group radio-sm">
-                                                <input type="radio" id="radio13" name="radio-group">
-                                                <label for="radio13">지난 90일</label>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="radio-group radio-sm">
-                                                <input type="radio" id="radio14" name="radio-group">
-                                                <label for="radio14">지난 365일</label>
-                                            </div>
-                                        </li>
-                                        <hr>
-                                        <li>
-                                            <div class="radio-group radio-sm">
-                                                <input type="radio" id="radio15" name="radio-group">
-                                                <label for="radio15">2023년</label>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="radio-group radio-sm">
-                                                <input type="radio" id="radio16" name="radio-group">
-                                                <label for="radio16">2022년</label>
-                                            </div>
-                                        </li>
-                                        <hr>
-                                        <li>
-                                            <div class="radio-group radio-sm">
-                                                <input type="radio" id="radio17" name="radio-group">
-                                                <label for="radio17">6월</label>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="radio-group radio-sm">
-                                                <input type="radio" id="radio18" name="radio-group">
-                                                <label for="radio18">5월</label>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="radio-group radio-sm">
-                                                <input type="radio" id="radio19" name="radio-group">
-                                                <label for="radio19">4월</label>
-                                            </div>
-                                        </li>
-                                        <hr>
-                                        <li>
-                                            <div class="radio-group radio-sm">
-                                                <input type="radio" id="radio20" name="radio-group">
-                                                <label for="radio20">사용자 설정</label>
-                                            </div>
-                                        </li>
+                            <div class="d-flex aic g4">
+                                <div class="dropdown-group type3">
+                                    <h2 class="hidden">타이틀</h2>
+                                    <div class="dropdown-list-wrap">
+                                        <button class="dropdown-button" data-target="drop01"><i
+                                                class="i i-calendar"></i>지난 28일</button>
+                                        <ul id="drop01" class="dropdown-list">
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio11" name="radio-group">
+                                                    <label for="radio11">지난 7일</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio12" name="radio-group">
+                                                    <label for="radio12">지난 28일</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio13" name="radio-group">
+                                                    <label for="radio13">지난 90일</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio14" name="radio-group">
+                                                    <label for="radio14">지난 365일</label>
+                                                </div>
+                                            </li>
+                                            <hr>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio15" name="radio-group">
+                                                    <label for="radio15">2023년</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio16" name="radio-group">
+                                                    <label for="radio16">2022년</label>
+                                                </div>
+                                            </li>
+                                            <hr>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio17" name="radio-group">
+                                                    <label for="radio17">6월</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio18" name="radio-group">
+                                                    <label for="radio18">5월</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio19" name="radio-group">
+                                                    <label for="radio19">4월</label>
+                                                </div>
+                                            </li>
+                                            <hr>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio20" name="radio-group">
+                                                    <label for="radio20">사용자 설정</label>
+                                                </div>
+                                            </li>
+    
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="dropdown-group dropdown-group-two">
+                                    <div class="dropdown-list-wrap">
+                                        <button class="dropdown-button active" data-target="drop02">기간별</button>
+                                        <ul id="drop02" class="dropdown-list" style="display: block;">
+                                            <li><a href="#">1</a></li>
+                                            <li><a href="#">2</a></li>
+                                            <li><a href="#">3</a></li>
+                                            <li><a href="#">4</a></li>
+                                            <li><a href="#">5</a></li>
+                                            <li><a href="#">6</a></li>
+                                            <li><a href="#">1</a></li>
+                                            <li><a href="#">2</a></li>
+                                            <li><a href="#">3</a></li>
+                                            <li><a href="#">4</a></li>
+                                            <li><a href="#">5</a></li>
+                                            <li><a href="#">6</a></li>
+                                        </ul>
+                                    </div>
 
-                                    </ul>
+                                    <div class="dropdown-list-wrap">
+                                        <button class="dropdown-button" data-target="drop03">일별</button>
+                                        <ul id="drop03" class="dropdown-list" style="display: none;">
+                                            <li><a href="#">1</a></li>
+                                            <li><a href="#">2</a></li>
+                                            <li><a href="#">3</a></li>
+                                            <li><a href="#">4</a></li>
+                                            <li><a href="#">5</a></li>
+                                            <li><a href="#">6</a></li>
+                                            <li><a href="#">1</a></li>
+                                            <li><a href="#">2</a></li>
+                                            <li><a href="#">3</a></li>
+                                            <li><a href="#">4</a></li>
+                                            <li><a href="#">5</a></li>
+                                            <li><a href="#">6</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
