--- a/resources/assets/GEPS-WEB-STA-BV01.html
+++ b/resources/assets/GEPS-WEB-STA-BV01.html
@@ -296,13 +296,13 @@
                             <div class="check-group">
                                 <input type="checkbox" id="chk05" checked>
                                 <label for="chk05">
-                                    <p class="chart-legend"><span class="red"></span>기간내응답율</p>
+                                    <p class="chart-legend"><span class="skyblue"></span>기간내응답율</p>
                                 </label>
                             </div>
                             <div class="check-group">
                                 <input type="checkbox" id="chk06" checked>
                                 <label for="chk06">
-                                    <p class="chart-legend"><span class="red"></span>실패</p>
+                                    <p class="chart-legend"><span class="purple"></span>실패</p>
                                 </label>
                             </div>
                         </div>
