--- a/resources/assets/GEPS-WEB-BIV-CU01.html
+++ b/resources/assets/GEPS-WEB-BIV-CU01.html
@@ -123,7 +123,7 @@
             </div>
         </header>
         <div class="content">
-            <div class="search-wrapper">
+            <div class="search-wrapper bg-gray">
                 <div class="container">
                     <div class="search-wrap">
                         <div class="legend">신상조사 실시현황</div>
