--- a/resources/assets/GEPS-WEB-SER-FA02.html
+++ b/resources/assets/GEPS-WEB-SER-FA02.html
@@ -125,40 +125,26 @@
         <div class="content container">
             <div class="sub-cont">
                 <div class="search-wrap">
-                    <div class="legend">공지사항 관리</div>
+                    <div class="legend">FAQ 관리</div>
                     <ul class="bread-crumb">
                         <li><i class="i i-home"></i></li>
                         <li><i class="i i-arrow-left"></i></li>
                         <li class="active">서비스 관리</li>
                         <li><i class="i i-arrow-left"></i></li>
-                        <li>공지사항 관리</li>
+                        <li>FAQ 관리</li>
                     </ul>
                 </div>
                 <div class="pt64">
                     <form action="" class="write-wrap">
                         <div class="input-group">
-                            <label for="">공지사항 제목</label>
-                            <input type="text" id="text01" placeholder="텍스트를 입력하세요">
-                        </div>
-                        <div class="dropdown-group">
-                            <h2>카테고리</h2>
-                            <div class="dropdown-list-wrap">
-                                <button class="dropdown-button" data-target="drop01">공통</button>
-                                <ul id="drop01" class="dropdown-list"  style="display: none;">
-                                    <li><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="input-group">
-                            <label for="">공지사항 내용</label>
+                            <label for="">질문 내용</label>
                             <!-- form edit filed -->
-                            <textarea name="" id="" style="height: 559px; flex:1; border: solid 1px #DDDDDD; border-radius: 4px; resize: none; padding: 16px;" placeholder="공지사항을 입력하세요."></textarea>
+                            <textarea name="" id="" style="height:340px; flex:1; border: solid 1px #DDDDDD; border-radius: 4px; resize: none; padding: 16px;" placeholder="질문을 입력하세요."></textarea>
                         </div>
                         <div class="input-group">
-                            <label for="">파일첨부</label>
-                            <button type="button" class="btn btn-sm btn-gray">찾아보기</button>
+                            <label for="">답변 내용</label>
+                            <!-- form edit filed -->
+                            <textarea name="" id="" style="height:340px; flex:1; border: solid 1px #DDDDDD; border-radius: 4px; resize: none; padding: 16px;" placeholder="답변을 입력하세요."></textarea>
                         </div>
                     </form>
                     <div class="table-top d-flex g8 mt32">
